--- a/Texcore/templates/paginas/base.html
+++ b/Texcore/templates/paginas/base.html
@@ -19,6 +19,7 @@
             <a class="nav-item nav-link" href="{% url 'inicio'%}">inicio</a>
             <a class="nav-item nav-link" href="{% url 'login'%}">login</a>
             <a class="nav-item nav-link" href="{% url 'index'%}">index</a>
+            <a class="nav-item nav-link" href="{% url 'crear_materia'%}">crear</a>
         </div>
     </nav>
 
