--- a/Texcore/templates/paginas/dashboard.html
+++ b/Texcore/templates/paginas/dashboard.html
@@ -8,24 +8,39 @@
 
   <div class="row mt-4">
     <div class="col-md-4">
-      <div class="card p-3">
-        <h5>Ingresar Materia Prima</h5>
-        <p>Registrar nueva materia prima en el sistema.</p>
-        <a class="btn btn-primary" href="{% url 'crear_materia' %}">Ingresar</a>
+      <div class="card p-3 shadow-sm h-100">
+        <div class="card-body">
+          <h5 class="card-title">Ingresar Materia Prima</h5>
+          <p class="card-text">Registrar nueva materia prima en el sistema.</p>
+          <a class="btn btn-primary" href="{% url 'crear_materia' %}">
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 5v14M5 12h14" stroke="#fff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            Ingresar
+          </a>
+        </div>
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card p-3">
-        <h5>Lista de Materia Prima</h5>
-        <p>Ver y editar las materias prima registradas.</p>
-        <a class="btn btn-secondary" href="{% url 'index_materia' %}">Ver lista</a>
+      <div class="card p-3 shadow-sm h-100">
+        <div class="card-body">
+          <h5 class="card-title">Lista de Materia Prima</h5>
+          <p class="card-text">Ver y editar las materias prima registradas.</p>
+          <a class="btn btn-secondary" href="{% url 'index_materia' %}">
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 6h18M3 12h18M3 18h18" stroke="#fff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            Ver lista
+          </a>
+        </div>
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card p-3">
-        <h5>Editar Materia</h5>
-        <p>Ir a la sección de edición rápida.</p>
-        <a class="btn btn-outline-primary" href="{% url 'editar_materia_no_id' %}">Editar</a>
+      <div class="card p-3 shadow-sm h-100">
+        <div class="card-body">
+          <h5 class="card-title">Editar Materia</h5>
+          <p class="card-text">Ir a la sección de edición rápida.</p>
+          <a class="btn btn-outline-primary" href="{% url 'editar_materia_no_id' %}">
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25z" stroke="#1e3a8a" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            Editar
+          </a>
+        </div>
       </div>
     </div>
   </div>
