--- a/Texcore/templates/libros/editar.html
+++ b/Texcore/templates/libros/editar.html
@@ -51,11 +51,11 @@
                 </div>
             </div>
                         <div class="text-center mt-3">
-                                <button type="submit" class="btn btn-primary">
+                                <button type="submit" class="btn btn-primary d-block d-sm-inline-block w-100 w-sm-auto">
                                     <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 13l4 4L19 7" stroke="#fff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                     Actualizar
                                 </button>
-                                <a href="{% url 'index_materia' %}" class="btn btn-secondary">
+                                <a href="{% url 'index_materia' %}" class="btn btn-secondary d-block d-sm-inline-block w-100 w-sm-auto">
                                     <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15 18l-6-6 6-6" stroke="#fff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                     Cancelar
                                 </a>
