--- a/Texcore/templates/libros/index.html
+++ b/Texcore/templates/libros/index.html
@@ -30,11 +30,11 @@
                 <td>{{ materia.lote }}</td>
                 <td>{{ materia.fecha_ingreso }}</td>
                 <td>
-                                        <a class="btn btn-sm btn-outline-primary" href="{% url 'editar_materia' materia.id %}">
+                                        <a class="btn btn-sm btn-outline-primary d-block d-sm-inline-block mb-1 mb-sm-0" href="{% url 'editar_materia' materia.id %}">
                                             <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25z" stroke="#1e3a8a" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                             Editar
                                         </a>
-                                        <button class="btn btn-sm btn-danger" data-toggle="modal" data-target="#confirmDeleteModal" data-action="{% url 'eliminar_materia' materia.id %}">
+                                        <button class="btn btn-sm btn-danger d-block d-sm-inline-block" data-toggle="modal" data-target="#confirmDeleteModal" data-action="{% url 'eliminar_materia' materia.id %}">
                                             <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 6h18" stroke="#fff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M8 6v14a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2V6" stroke="#fff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 11v6M14 11v6" stroke="#fff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                             Eliminar
                                         </button>
