--- a/Texcore/templates/paginas/base.html
+++ b/Texcore/templates/paginas/base.html
@@ -50,6 +50,15 @@
               </svg>
               Dashboard Admin
             </a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'listar_usuarios' %}">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mr-1">
+                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" stroke="currentColor" stroke-width="1.5"/>
+                <circle cx="9" cy="7" r="4" stroke="currentColor" stroke-width="1.5"/>
+                <path d="M23 21v-2a4 4 0 0 0-3-3.87" stroke="currentColor" stroke-width="1.5"/>
+                <path d="M16 3.13a4 4 0 0 1 0 7.75" stroke="currentColor" stroke-width="1.5"/>
+              </svg>
+              Usuarios
+            </a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'index_materia' %}">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mr-1">
                 <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" stroke="currentColor" stroke-width="1.5" fill="none"/>
@@ -69,6 +78,37 @@
               Mi Dashboard
             </a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'crear_materia' %}">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mr-1">
+                <path d="M12 5v14M5 12h14" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+              Ingresar
+            </a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'index_materia' %}">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mr-1">
+                <path d="M8 6h13M8 12h13M8 18h13M3 6h.01M3 12h.01M3 18h.01" stroke="currentColor" stroke-width="1.5"/>
+              </svg>
+              Listado
+            </a></li>
+            
+            <!-- Preparador navigation -->
+            {% elif user.profile.is_preparador %}
+            <li class="nav-item"><a class="nav-link" href="{% url 'preparador_dashboard' %}">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mr-1">
+                <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" stroke="currentColor" stroke-width="1.5"/>
+              </svg>
+              Mi Dashboard
+            </a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'crear_preparacion' %}">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mr-1">
+                <path d="M12 5v14M5 12h14" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+              Nueva Preparación
+            </a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'listar_preparaciones' %}">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mr-1">
+                <path d="M8 6h13M8 12h13M8 18h13M3 6h.01M3 12h.01M3 18h.01" stroke="currentColor" stroke-width="1.5"/>
+              </svg>
+              Preparaciones
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mr-1">
                 <path d="M12 5v14M5 12h14" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
               </svg>
