--- a/Texcore/templates/paginas/operario_dashboard.html
+++ b/Texcore/templates/paginas/operario_dashboard.html
@@ -79,9 +79,7 @@
             <div class="row">
                 <div class="col-md-6 mb-4">
                     <a href="{% url 'crear_materia' %}" class="quick-action d-block">
-                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12 5v14M5 12h14" stroke="#4facfe" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                        <i class="fas fa-plus-circle fa-3x text-primary mb-3"></i>
                         <h5>Ingresar Materia Prima</h5>
                         <p class="text-muted mb-0">Registrar nuevo lote de materia prima</p>
                     </a>
@@ -89,13 +87,7 @@
                 
                 <div class="col-md-6 mb-4">
                     <a href="{% url 'index_materia' %}" class="quick-action d-block">
-                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" stroke="#4facfe" stroke-width="2" fill="none"/>
-                            <polyline points="14,2 14,8 20,8" stroke="#4facfe" stroke-width="2" fill="none"/>
-                            <line x1="16" y1="13" x2="8" y2="13" stroke="#4facfe" stroke-width="2"/>
-                            <line x1="16" y1="17" x2="8" y2="17" stroke="#4facfe" stroke-width="2"/>
-                            <polyline points="10,9 9,9 8,9" stroke="#4facfe" stroke-width="2"/>
-                        </svg>
+                        <i class="fas fa-list-alt fa-3x text-primary mb-3"></i>
                         <h5>Ver Listado</h5>
                         <p class="text-muted mb-0">Consultar todos los registros</p>
                     </a>
