--- a/Texcore/templates/paginas/operario_dashboard.html
+++ b/Texcore/templates/paginas/operario_dashboard.html
@@ -92,6 +92,22 @@
                         <p class="text-muted mb-0">Consultar todos los registros</p>
                     </a>
                 </div>
+                
+                <div class="col-md-6 mb-4">
+                    <a href="{% url 'listar_hilaturas' %}" class="quick-action d-block">
+                        <i class="fas fa-spinner fa-3x text-success mb-3"></i>
+                        <h5>Procesos de Hilatura</h5>
+                        <p class="text-muted mb-0">Gestionar procesos de hilatura</p>
+                    </a>
+                </div>
+                
+                <div class="col-md-6 mb-4">
+                    <a href="{% url 'crear_hilatura' %}" class="quick-action d-block">
+                        <i class="fas fa-plus fa-3x text-info mb-3"></i>
+                        <h5>Nueva Hilatura</h5>
+                        <p class="text-muted mb-0">Crear proceso de hilatura</p>
+                    </a>
+                </div>
             </div>
         </div>
 
