--- a/Texcore/templates/paginas/admin_dashboard.html
+++ b/Texcore/templates/paginas/admin_dashboard.html
@@ -127,6 +127,24 @@
                                 </div>
                             </a>
                         </div>
+                        <div class="col-md-4 mb-3">
+                            <a href="{% url 'listar_hilaturas' %}" class="btn btn-outline-success btn-block h-100 d-flex align-items-center justify-content-center">
+                                <div class="text-center">
+                                    <i class="fas fa-spinner fa-2x mb-2"></i><br>
+                                    <strong>Ver Hilaturas</strong><br>
+                                    <small class="text-muted">Gestionar procesos de hilatura</small>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <a href="{% url 'reporte_hilaturas' %}" class="btn btn-outline-info btn-block h-100 d-flex align-items-center justify-content-center">
+                                <div class="text-center">
+                                    <i class="fas fa-chart-bar fa-2x mb-2"></i><br>
+                                    <strong>Reporte Hilatura</strong><br>
+                                    <small class="text-muted">Visualizar estadísticas</small>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
