--- a/Texcore/templates/paginas/admin_dashboard.html
+++ b/Texcore/templates/paginas/admin_dashboard.html
@@ -200,7 +200,7 @@
                             <div class="text-xs font-weight-bold text-info text-uppercase mb-1">En Proceso</div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800">{{ preparaciones_en_proceso }}</div>
                         </div>
-                        <div class="col-auto">
+                        <div class="col-2 text-center">
                             <i class="fas fa-cog fa-2x text-info fa-spin"></i>
                         </div>
                     </div>
@@ -325,7 +325,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-4">
         <!-- Preparaciones Recientes -->
         <div class="col-lg-8">
             <div class="table-container">
